--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 <div class="carousel-container">
   <div class="carousel">
-     <img src="image/image1.jpeg" alt="Image 1">
-    <img src="image/image2.jpeg" alt="Image 2">
-    <img src="image/image3.jpeg" alt="Image 3">
-    <img src="image/image4.jpeg" alt="Image 4">
+     <img src="image1.jpeg" alt="Image 1">
+    <img src="image2.jpeg" alt="Image 2">
+    <img src="image3.jpeg" alt="Image 3">
+    <img src="image4.jpeg" alt="Image 4">
   </div>
 </div>
 
